use super::components::{PrimitiveType, QualifiedName};

/// A mathematical resolution query representing intent, replacing raw unresolved names.
///
/// As per theoretical guidelines, the Lexical Scoping phase shouldn't execute paths immediately,
/// but instead produce a `Query` (substitution) which is later evaluated by navigating the global IR.
#[derive(Debug, Clone, PartialEq, Eq, PartialOrd, Ord, Hash, serde::Serialize, serde::Deserialize)]
pub enum Query {
    /// Find-going-up: search for a component named `String` ascending the lexical scope.
    Find(String),
    /// Find-going-down: given the result of a sub-query, extract the member named `String`.
    Extract(Box<Query>, String),
    /// Execute the sub-query (which should yield a callable) and resolve its return type.
    Call(Box<Query>),
}

/// Represents the state of a type reference during the analysis pipeline.
#[derive(Debug, Clone, PartialEq, Eq, PartialOrd, Ord, Hash, serde::Serialize, serde::Deserialize)]
pub enum TypeRef {
    Primitive(PrimitiveType),
    /// A raw text path extracted by the parser before any substitution.
    Unresolved(QualifiedName),
    /// A structured resolution query generated by the Symbol Stack during local substitution.
    ResolutionQuery(Query),
    /// Successfully matched to a local component in the final IR graph.
    Resolved(QualifiedName),
    /// Jumped out of the local workspace boundaries via an import.
    External(QualifiedName),
    /// Exhausted all resolution mechanisms without success.
    Failed(QualifiedName),
}
